apps/be-service/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: be-service
  labels:
    app: be-service
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8080
      name: http
  selector:
    app: be-service
